# next.rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  llms.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/next-actions/: Cargo.toml
crates/next-actions/src/: action.rs  form.rs  lib.rs  registry.rs
crates/next-assets/: Cargo.toml
crates/next-assets/src/: font.rs  image.rs  lib.rs
crates/next-cli/: Cargo.toml
crates/next-cli/src/: config.rs  main.rs
crates/next-cli/src/commands/: add.rs  build.rs  check.rs  context.rs  create.rs  dev.rs  mod.rs
crates/next-macros/: Cargo.toml
crates/next-macros/src/: lib.rs
crates/next-middleware/: Cargo.toml
crates/next-middleware/src/: lib.rs  matcher.rs  request.rs  response.rs
crates/next-router/: Cargo.toml
crates/next-router/src/: boundary.rs  codegen.rs  hooks.rs  layout.rs  lib.rs  link.rs  matcher.rs  scanner.rs  segment.rs
crates/next-rsc/: Cargo.toml
crates/next-rsc/src/: async_component.rs  boundary.rs  component.rs  component_registry.rs  directive.rs  lib.rs  macros.rs  markers.rs  payload.rs  renderer.rs
crates/next-server/: Cargo.toml
crates/next-server/src/: api.rs  handler.rs  isr.rs  lib.rs  rsc_handler.rs  ssg.rs  ssr.rs  streaming.rs  ws.rs
crates/react-core/: Cargo.toml
crates/react-core/benches/: reactivity.rs
crates/react-core/src/: children.rs  component.rs  context.rs  effect.rs  lib.rs  memo.rs  resource.rs  runtime.rs  signal.rs
crates/react-dom/: Cargo.toml
crates/react-dom/src/: dom.rs  events.rs  hydrate.rs  lib.rs  render.rs
crates/react-elements/: Cargo.toml
crates/react-elements/src/: attributes.rs  component.rs  element.rs  events.rs  head.rs  html.rs  lib.rs  node.rs  reactive.rs  style.rs  suspense.rs  types.rs
crates/react-wasm/: Cargo.toml
crates/react-wasm/src/: dom.rs  fetch.rs  hydration.rs  lib.rs  router.rs  runtime.rs  websocket.rs
examples/blog/: Cargo.toml
examples/blog/src/: components.rs  data.rs  lib.rs  rsc.rs
examples/blog/src/app/: layout.rs  mod.rs  page.rs
examples/blog/src/app/posts/: mod.rs
examples/counter/: Cargo.toml  index.html
examples/counter/src/: lib.rs
examples/hello-world/: Cargo.toml  index.html
examples/hello-world/src/: lib.rs
examples/patterns/: Cargo.toml
examples/patterns/src/: component_composition.rs  conditional_render.rs  context_theme.rs  data_fetching.rs  form_validation.rs  lib.rs
examples/todo-app/: Cargo.toml  index.html
examples/todo-app/src/: lib.rs
examples/wasm-demo/: Cargo.toml  build.sh
examples/wasm-demo/src/: components.rs  lib.rs  pages.rs  server.rs
