[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/OS-Lihua/next.rs"
homepage = "https://github.com/OS-Lihua/next.rs"
authors = ["OS-Lihua"]
keywords = ["react", "nextjs", "wasm", "ssr", "web"]
categories = ["web-programming", "wasm", "gui"]

[workspace.dependencies]
# Shared dependencies will be added here
