[package]
name = "next-rs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for next.rs - Next.js reimplemented in Rust"

[[bin]]
name = "next"
path = "src/main.rs"

[dependencies]
next-rs-router = { version = "0.1.1", path = "../next-router" }
next-rs-server = { version = "0.1.1", path = "../next-server" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
anyhow = "1"
serde_json = "1"
notify = "8.2.0"
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
