[package]
name = "next-rs-middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Middleware implementation for next.rs"

[dependencies]
hyper = { version = "1", features = ["full"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
