[package]
name = "next-rs-router"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "App Router for next.rs - file system based routing with nested layouts"

[dependencies]
react-rs-core = { version = "0.1.0", path = "../react-core" }
react-rs-elements = { version = "0.1.0", path = "../react-elements" }

[dev-dependencies]
tempfile = "3"
