[package]
name = "next-rs-rsc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "React Server Components implementation for next.rs"

[dependencies]
react-rs-core = { path = "../react-core" }
react-rs-elements = { path = "../react-elements" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
