[package]
name = "next-rs-rsc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "React Server Components implementation for next.rs"

[dependencies]
react-rs-core = { version = "0.1.1", path = "../react-core" }
react-rs-elements = { version = "0.1.1", path = "../react-elements" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
