[package]
name = "next-rs-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP server for next.rs with SSR/SSG/ISR support"

[dependencies]
next-rs-router = { version = "0.1.0", path = "../next-router" }
next-rs-rsc = { version = "0.1.0", path = "../next-rsc" }
react-rs-dom = { version = "0.1.0", path = "../react-dom" }
react-rs-elements = { version = "0.1.0", path = "../react-elements" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-core = "0.3"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
