[package]
name = "react-rs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core reactive primitives for react.rs - Signal, Effect, Memo, Context"

[dependencies]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "reactivity"
harness = false
