[package]
name = "react-rs-dom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DOM rendering and SSR for react.rs"

[dependencies]
react-rs-core = { version = "0.2.0", path = "../react-core" }
react-rs-elements = { version = "0.2.0", path = "../react-elements" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
    "Event",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
    "EventTarget",
] }
js-sys = "0.3"

[dev-dependencies]

[features]
default = []
