[package]
name = "react-rs-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "WASM runtime and hydration for react.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
react-rs-core = { version = "0.1.0", path = "../react-core" }
react-rs-elements = { version = "0.1.0", path = "../react-elements" }
next-rs-rsc = { version = "0.1.0", path = "../next-rsc" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "DocumentFragment",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "Text",
    "Window",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "DomTokenList",
    "CssStyleDeclaration",
    "Response",
    "Headers",
    "RequestInit",
    "RequestMode",
    "Request",
    "History",
    "Location",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
