[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
react-rs-core = { path = "../../crates/react-core" }
react-rs-elements = { path = "../../crates/react-elements" }
react-rs-dom = { path = "../../crates/react-dom" }
next-rs-router = { path = "../../crates/next-router" }
next-rs-rsc = { path = "../../crates/next-rsc" }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
